<resources>
    <string name="app_name">Drinks</string>
    <string name="action_search">Search</string>
    <string name="drinks_empty">No drinks found</string>
    <string name="liquors_empty">No liquors found</string>
    <string name="content_description_drink">Drink picture</string>
    <string name="content_description_liquor">Liquor picture</string>
    <string name="network_error">Couldn\'t reach network</string>
    <string name="refresh">Try again</string>
    <string name="history">History</string>
    <string name="wikipedia">See %1$s on Wikipedia</string>
    <string name="title_drinks">Cocktails</string>
    <string name="title_liquors">Liquors</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="credits">Alexandre Masciulli - Paris, France</string>
    <string name="action_feedback">Send feedback</string>
    <string name="feedback_mail">alexandre.masciulli@gmail.com</string>
    <string name="feedback_default_subject">[Drinks] Feedback</string>
    <string name="related_drinks">Those cocktails contain %1$s :</string>
    <string name="action_licenses">Open source licenses</string>
    <string name="title_licenses">Open source licenses</string>
    <string name="credits_icon">App icon by Christophe Vielet</string>
    <string name="content_description_icon">Drinks icon</string>
    <string name="transition_drink" translatable="false">transition_drink</string>
    <string name="transition_liquor" translatable="false">transition_liquor</string>
</resources>
